Fixed Text Wrapping

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -23,6 +23,7 @@ b, h1, h2, h3, h4, h5, h6 {
 body, html {
     font-family: "Montserrat", sans-serif;
     scroll-behavior: smooth;
+    word-break: break-all;
 }
 
 main {
